--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 data
-webscraping/*
 data science projects/Kaggle projects/data
-flask/api_flaskr/.env
 NLP/data/*
 .env
+_Msc Data Science/Topic 1 - introduction/*
