--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,4 @@ data
 data science projects/Kaggle projects/data
 NLP/data/*
 .env
-_Msc Data Science/machine learning/Topic 1 - introduction
+_Msc Data Science/machine learning/Topic 1 - introduction/*
