--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,2 @@
-self-learning/data
-self-learning/data science projects/Kaggle projects/data
-self-learning/NLP/data/*
+.data
 .env
-MSc Data Science/machine learning/Topic 1 - introduction/
